# SimpleControlSim

./: .csv  .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.old  NOTES.md  README.md  TODO.md  astab.m  createData.jl  data.cpp  data.h  defines.h  diff.cpp  diff.h  dynamics.cpp  dynamics.h  linearControllerAnalysis.m  matrix_vector_ops.cpp  matrix_vector_ops.h  nn_control.csv  nun.ttt  policy.cpp  policy.cpp.bak  policy.h  policy.h.bak  policy_eval.cpp  policy_eval.h  probability_distributions.cpp  probability_distributions.h  projectToController.jl  runner.cpp  runner.h  simulate.jl  simulator.cpp  simulator.h  testDynamics.cpp  testDynamics.h  tester.cpp  (+4 more)
data/: RK_AStabilityTest.csv  RK_AStabilityTestMatlab.csv  lqrCtl.csv  lqrMatlab.csv  lqrNn0Loops.csv  lqrNn10Loops.csv  lqrNn15Loops.csv  lqrNn20Loops.csv  lqrNn5Loops.csv  lqrSimLinearizedYaw.csv  lqrSimSinusoidalYaw.csv  sample_mse.csv  test.txt  tmp.txt
julia/: createData.jl  processData.jl  testgl.jl  testmeshcat.jl
nn/: feedbackNn0Loops.txt  feedbackNn10Loops.txt  feedbackNn15Loops.txt  feedbackNn20Loops.txt  feedbackNn5Loops.txt
python/: lqrControllerSim.py  testLogp.py  testMxNet.html  testMxNet.py  tmp.txt  visualizer.html  visualizer.py
resources/: obj.mtl  quadrotor.urdf
test/: CMakeLists.txt  testCppAd.cpp  testCppAdVec.h  testFadbad.cpp  testMxNet.cpp  testMxNet.h  testSim.cpp  testSim.h  test_defines.h
tools/: CMakeLists.txt  data_converter.cpp
